# NetworkSecurity

./: Dockerfile  README.md  main.py  push_data.py  pyproject.toml  requirements.txt  setup.py  test_mongodb.py
.github/workflows/: main.yml
Artifacts/04_26_2025_18_02_28/data_ingestion/ingested/: train.csv
Artifacts/04_26_2025_18_02_28/data_transformation/transformed/: test.npy  train.npy
Artifacts/04_26_2025_18_02_28/data_validation/drift_report/: report.yaml
Artifacts/04_26_2025_18_02_28/data_validation/validated/: test.csv
final_model/: model.pkl  preprocessor.pkl
networksecurity/compoents/: data_ingestion.py  data_transformation.py  data_validation.py  model_trainer.py  tempCodeRunnerFile.py
networksecurity/constants/training_pipeline/: __init__.py
networksecurity/entity/: artifact_entity.py  config_entity.py
networksecurity/exception/: exception.py
networksecurity/logging/: logger.py
networksecurity/pipeline/: training_pipeline.py
networksecurity/utils/main_utils/: utils.py
networksecurity/utils/ml_utils/metric/: classification_metric.py
