[project]
name = "networksecurity"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "certifi>=2025.4.26",
    "dagshub>=0.5.9",
    "fastapi>=0.115.12",
    "mlflow>=2.22.0",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "pyaml>=25.1.0",
    "pymongo[src]>=4.12.0",
    "python-dotenv>=1.1.0",
    "python-multipart>=0.0.20",
    "scikit-learn>=1.6.1",
    "uvicorn>=0.34.2",
]
